test/parser/chp/004.hac
// "004.hac" parse fail

defproc empty(chan?(bool) L; chan!(bool) R) {
chp {
	R!false		// wants expression list in parens
}
}

